refactor: 이름으로 참가자를 찾을 때 1명만 발견해야한다는 의미로 상수처리